[project]
name = "Advent-of-Code"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "requests>=2.32.5",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 120
fix = true
exclude = [
    ".venv"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-commas trailing-comma-on-bare-tuple
    "COM818",
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "typing",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
